4.x: Server Features (#7777)
* Method added to Config to access root configuration node
* Use Routing builders instead of routing
* Use common config in security
* Server feature
* ObserveFeature as server feature
* Security feature as server feature
* AccessLog as a server feature.
* CORS as a server feature
* OpenaAPI as a server feature
* Updated behavior of providers in builders. Now do not duplicate same service if already configured in builder.
* Improved handling of create(Config) for properties on builders.
* Fix NPE in features when no features defined.
* Update of configuration documentation.
* Documentation fixes.

* Archetype fixes

Signed-off-by: tvallin <thibault.vallin@oracle.com>
Co-authored-by: tvallin <thibault.vallin@oracle.com>